--- a/src/templates/errors/error_404.html
+++ b/src/templates/errors/error_404.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 Not Found | G-BASE</title>
-    <link rel="stylesheet" href="{% static 'css/404.css' %}">
+    <link rel="stylesheet" href="{% static 'css/errors.css' %}">
 </head>
 <body>
     {% include "components/header.html" %}
