fix::dashboardの実装作業

--- a/src/templates/dashboard/index.html
+++ b/src/templates/dashboard/index.html
@@ -7,6 +7,9 @@
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/dashboard.css' %}">
     <link rel="stylesheet" href="{% static 'css/progress.css' %}">
+    <link rel="stylesheet" href="{% static 'css/mvp.css' %}">
+    <link rel="stylesheet" href="{% static 'css/quests.css' %}">
+
 </head>
 <body class="dashboard-body">
 
