--- a/src/templates/accounts/settings.html
+++ b/src/templates/accounts/settings.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 Not Found | G-BASE</title>
+    <title>プロフィール画面 | G-BASE</title>
+    <link rel="stylesheet" href="{% static 'css/header.css' %}">
     <link rel="stylesheet" href="{% static 'css/setting.css' %}">
+    <link rel="stylesheet" href="{% static 'css/footer.css' %}">
 </head>
 <body>
 {% include "components/header.html" %}
