fix::quest_cardの補修

--- a/src/templates/dashboard/index.html
+++ b/src/templates/dashboard/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="{% static 'css/progress.css' %}">
     <link rel="stylesheet" href="{% static 'css/progress_star.css' %}">
     <link rel="stylesheet" href="{% static 'css/progress_bar.css' %}">
-    <link rel="stylesheet" href="{% static 'css/quest_card.css' %}">
+    <link rel="stylesheet" href="{% static 'css/today_card.css' %}">
     <link rel="stylesheet" href="{% static 'css/mvp.css' %}">
     <link rel="stylesheet" href="{% static 'css/quests.css' %}">
     <link rel="stylesheet" href="{% static 'css/footer.css' %}">
