--- a/src/static/css/dashboard.css
+++ b/src/static/css/dashboard.css
@@ -73,7 +73,7 @@
 .section-title {
     font-size: 20px;
     font-weight: 800;
-    color: #1e293b;
+    color: #fff;
     margin-bottom: 20px;
 }
 
